# INJECTION-NOISE-WATERMARK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PROJECT_STATUS.md  README.md  REBRANDING_COMPLETE.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
app/: main.py
app/adapters/: __init__.py  base.py  diffusion_adapters.py  neural_adapters.py
app/api/: assets.py  deps.py  detect.py  embed.py  models.py  remove.py  trace.py  verify.py  web.py
app/config/: settings.py
app/core/: __init__.py  base.py  detection_engine.py  frequency_watermark.py  keyed_gaussian.py  registry.py  removal_engine.py  tracking_engine.py  watermark_engine.py
app/db/: base.py  models.py
app/payload/: __init__.py  crypto.py  keystore.py  service.py
app/provenance/: __init__.py  audit.py  c2pa.py  registry.py
app/reports/: __init__.py  evidence.py
app/schemas/: api.py
app/utils/: hashing.py  imaging.py  media.py
app/video/: io.py
docs/: API.md  ARCHITECTURE.md
src/tree_ring_watermark/: __init__.py  config.py  io.py  optimization.py
src/tree_ring_watermark/core/: __init__.py  batch.py  detection.py  patterns.py  robustness.py  watermark.py
src/tree_ring_watermark/pipelines/: __init__.py  base.py  stable_diffusion.py
tests/: __init__.py  test_config.py  test_patterns.py  test_pipelines.py
tests/app/: __init__.py  conftest.py  test_api.py  test_engines.py  test_payload.py  test_provenance.py  test_tracking_removal.py
